--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.1.2",
+    "@angular/cdk": "^9.1.40",
     "@angular/common": "~11.1.2",
     "@angular/compiler": "~11.1.2",
     "@angular/core": "~11.1.2",
@@ -20,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
     "rxjs": "~6.6.0",
+    "smart-webcomponents-angular": "^9.1.40",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
